--- a/packages/@testuj.to/react/src/components/DropdownSelect/styles.css
+++ b/packages/@testuj.to/react/src/components/DropdownSelect/styles.css
@@ -13,6 +13,10 @@ button {
   cursor: pointer;
 }
 
+div[data-radix-popper-content-wrapper] {
+  z-index: 999 !important;
+}
+
 .tt-dropdownSelect-content {
   box-shadow: 0px 2px 8px #0000001f;
   border-radius: 8px;
