--- a/packages/@testuj.to/react/src/components/Dialog/styles.css
+++ b/packages/@testuj.to/react/src/components/Dialog/styles.css
@@ -21,8 +21,7 @@ input {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 90vw;
-  max-width: 450px;
+  max-width: 80vw;
   max-height: 85vh;
   padding: 25px;
   z-index: 9999;
