--- a/packages/@testuj.to/react/src/components/CampaignHeroSection/styles.css
+++ b/packages/@testuj.to/react/src/components/CampaignHeroSection/styles.css
@@ -71,6 +71,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .tt-campaign-hero-section-row-space-between {
@@ -85,7 +86,6 @@
   height: 1rem;
   box-sizing: border-box;
   margin: 1rem 0;
-  color: #ff0000;
   font-size: 0.8rem;
   font-weight: 600;
 }
