--- a/packages/@testuj.to/react/src/components/Button/styles.css
+++ b/packages/@testuj.to/react/src/components/Button/styles.css
@@ -36,6 +36,8 @@
 
 .tt-button.primary:disabled:hover {
   background-color: #eeeff2;
+  color: #888e98;
+  border: 1px solid #eeeff2;
 }
 
 .tt-button.secondary {
@@ -55,6 +57,8 @@
 }
 
 .tt-button.secondary:disabled:hover {
+  background-color: #eeeff2;
+  color: #888e98;
   border: 1px solid #eeeff2;
 }
 
@@ -76,6 +80,8 @@
 }
 
 .tt-button.success:disabled:hover {
+  background-color: #eeeff2;
+  color: #888e98;
   border: 1px solid #eeeff2;
 }
 
@@ -96,6 +102,8 @@
 }
 
 .tt-button.danger:disabled:hover {
+  background-color: #eeeff2;
+  color: #888e98;
   border: 1px solid #eeeff2;
 }
 
@@ -116,5 +124,7 @@
 }
 
 .tt-button.info:disabled:hover {
+  background-color: #eeeff2;
+  color: #888e98;
   border: 1px solid #eeeff2;
 }
