fix: Add Datetimesupport

--- a/packages/@testuj.to/react/src/components/DateRangePicker/styles.css
+++ b/packages/@testuj.to/react/src/components/DateRangePicker/styles.css
@@ -22,7 +22,6 @@
   border: none;
   border-radius: 8px;
   box-shadow: 0px 3px 6px #00000029;
-  overflow: hidden;
   padding-top: 1rem;
 }
 .react-datepicker__triangle {
@@ -228,4 +227,29 @@
 
 .tt-dateRangePicker-icon {
   margin-left: 1rem;
+}
+
+.react-datepicker__year-dropdown {
+  background-color: white;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 3px 6px #00000029;
+}
+
+.react-datepicker__month-dropdown {
+  background-color: white;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 3px 6px #00000029;
+}
+
+.react-datepicker__time-container--with-today-button {
+  padding-bottom: 1rem;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 3px 6px #00000029;
+}
+
+.react-datepicker__time-container {
+  border-left: none !important;
 }
