--- a/packages/@testuj.to/react/src/components/DatePicker/styles.css
+++ b/packages/@testuj.to/react/src/components/DatePicker/styles.css
@@ -40,9 +40,9 @@
   background-color: transparent;
 }
 
-.react-datepicker__current-month {
-  color: var(--color-text);
-  font-size: 1.2rem;
+.react-datepicker__day--selected {
+  color: white !important;
+  background-color: black;
 }
 
 .react-datepicker-time__header {
