--- a/packages/@testuj.to/react/src/components/DatePicker/styles.css
+++ b/packages/@testuj.to/react/src/components/DatePicker/styles.css
@@ -42,7 +42,7 @@
 
 .react-datepicker__day--selected {
   color: white !important;
-  background-color: black;
+  background-color: var(--color-text);
 }
 
 .react-datepicker-time__header {
@@ -79,14 +79,14 @@
 }
 
 .react-datepicker__week {
-  color: black;
+  color: var(--color-text);
   width: 100%;
 }
 
 .react-datepicker__day {
   width: 2.8rem;
   line-height: 2.8rem;
-  color: black;
+  color: var(--color-text);
   border-radius: 50%;
   margin: 0.1rem 0;
   padding: 0 0.15rem;
@@ -94,7 +94,7 @@
 }
 
 .react-datepicker__day:hover {
-  background-color: black;
+  background-color: var(--color-text);
   color: white;
   border-radius: 50%;
 }
@@ -106,7 +106,7 @@
 }
 
 .react-datepicker__day--in-selecting-range:hover {
-  color: black;
+  color: var(--color-text);
   border-radius: 0;
   font-weight: bold;
 }
@@ -116,7 +116,7 @@
     .react-datepicker__day--in-selecting-range) {
   margin-right: 0;
   background-color: rgba(13, 26, 51, 0.05);
-  color: black;
+  color: var(--color-text);
   border-radius: 50% 0 0 50%;
 }
 
@@ -125,7 +125,7 @@
     .react-datepicker__day--in-selecting-range) {
   margin-left: 0;
   background-color: rgba(13, 26, 51, 0.05);
-  color: black;
+  color: var(--color-text);
   border-radius: 0 50% 50% 0;
 }
 
@@ -139,12 +139,12 @@
 
 .react-datepicker__day--in-range {
   background-color: rgba(13, 26, 51, 0.05);
-  color: black;
+  color: var(--color-text);
   border-radius: 0;
 }
 
 .react-datepicker__day--in-range:hover .react {
-  color: black;
+  color: var(--color-text);
   border-radius: 0;
   font-weight: bold;
 }
@@ -166,7 +166,7 @@
 
 .react-datepicker__day--range-start::before {
   content: "";
-  background-color: black;
+  background-color: var(--color-text);
   position: absolute;
   top: 0;
   left: 0;
@@ -183,7 +183,7 @@
 
 .react-datepicker__day--range-end::after {
   content: "";
-  background-color: black;
+  background-color: var(--color-text);
   color: white;
   position: absolute;
   top: 0;
@@ -211,6 +211,15 @@
 
 .react-datepicker__day--keyboard-selected {
   background-color: rgba(13, 26, 51, 0.05);
+}
+
+.react-datepicker__time-container
+  .react-datepicker__time
+  .react-datepicker__time-box
+  ul.react-datepicker__time-list
+  li.react-datepicker__time-list-item--selected {
+  background-color: var(--color-text);
+  color: white;
 }
 
 .tt-datePicker-input {
