--- a/packages/@testuj.to/react/src/components/NpsScoreCard/style.css
+++ b/packages/@testuj.to/react/src/components/NpsScoreCard/style.css
@@ -69,6 +69,9 @@
     left: 50%;
     transform: translate(-50%, 0);
     top: 61px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .tt-gauge-chart-total {
     font-size: 36px;
@@ -81,6 +84,7 @@
     color: #888E98;
     margin: 0;
     text-align: center;
+    width: min-content;
 }
 .tt-gauge-chart-pointer {
     width: 35px;
