--- a/packages/@testuj.to/react/src/components/Timeline/styles.css
+++ b/packages/@testuj.to/react/src/components/Timeline/styles.css
@@ -30,7 +30,7 @@
   width: 100%;
   display: flex;
   align-items: flex-start;
-  justify-content: space-evenly;
+  justify-content: space-around;
   text-align: center;
   position: relative;
 }
