--- a/packages/@testuj.to/react/src/components/Checkbox/styles.css
+++ b/packages/@testuj.to/react/src/components/Checkbox/styles.css
@@ -48,7 +48,7 @@
   justify-content: space-between;
   border: 1px solid var(--color-border);
   border-radius: 12px;
-  height: 48px;
+  min-height: 48px;
   padding: 0 16px;
 }
 
