--- a/packages/@testuj.to/react/src/components/Accordion/styles.css
+++ b/packages/@testuj.to/react/src/components/Accordion/styles.css
@@ -1,86 +1,92 @@
 .tt-accordion-root {
-  border-radius: 6px;
-  width: 100%;
-  box-sizing: border-box;
+    border-radius: 6px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .tt-accordion-item {
-  overflow: hidden;
-  border: 1px solid var(--border-color);
-  background: #ffffff 0% 0% no-repeat padding-box;
-  border: 1px solid #dadee2;
-  border-radius: 16px;
-  margin-bottom: 0.5rem;
+    overflow: hidden;
+    border: 1px solid var(--border-color);
+    background: #ffffff 0% 0% no-repeat padding-box;
+    border: 1px solid #dadee2;
+    border-radius: 16px;
+    margin-bottom: 0.5rem;
 }
+
+.tt-accordion-item.filled {
+    background: #f7f8fa;
+    border: none;
+}
+
 .tt-accordion-item:last-child {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .tt-accordion-header {
-  display: flex;
-  margin: 0;
+    display: flex;
+    margin: 0;
 }
 
 .tt-accordion-trigger {
-  border: none;
-  font-family: inherit;
-  background-color: transparent;
-  /* height: 45px; */
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: var(--text-primary);
-  font: var(--text-normal-16-600);
-  padding: 20px 20px;
-  transition: all 300ms;
+    border: none;
+    font-family: inherit;
+    background-color: transparent;
+    /* height: 45px; */
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: var(--text-primary);
+    font: var(--text-normal-16-600);
+    padding: 20px 20px;
+    transition: all 300ms;
 }
 
 .tt-accordion-trigger[aria-expanded="true"] {
-  padding: 20px 20px 0 20px;
+    padding: 20px 20px 0 20px;
 }
 
 .tt-accordion-trigger:hover {
-  background-color: var(--mauve2);
+    background-color: var(--mauve2);
 }
 
 .tt-accordion-content {
-  overflow: hidden;
-  font: var(--text-normal-14);
+    overflow: hidden;
+    font: var(--text-normal-14);
 }
 
 .tt-accordion-inner-content {
-  padding: 10px 20px 30px 20px;
+    padding: 10px 20px 30px 20px;
 }
 
 .tt-accordion-content[data-state="open"] {
-  animation: slideDown 300ms cubic-bezier(0.87, 0, 0.13, 1);
+    animation: slideDown 300ms cubic-bezier(0.87, 0, 0.13, 1);
 }
 .tt-accordion-content[data-state="closed"] {
-  animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1);
+    animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1);
 }
 
 .tt-accordion-chevron {
-  transition: transform 300ms cubic-bezier(0.87, 0, 0.13, 1);
+    transition: transform 300ms cubic-bezier(0.87, 0, 0.13, 1);
 }
 .tt-accordion-trigger[data-state="open"] > .tt-accordion-chevron {
-  transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
 @keyframes slideDown {
-  from {
-    height: 0;
-  }
-  to {
-    height: var(--radix-accordion-content-height);
-  }
+    from {
+        height: 0;
+    }
+    to {
+        height: var(--radix-accordion-content-height);
+    }
 }
 
 @keyframes slideUp {
-  from {
-    height: var(--radix-accordion-content-height);
-  }
-  to {
-    height: 0;
-  }
+    from {
+        height: var(--radix-accordion-content-height);
+    }
+    to {
+        height: 0;
+    }
 }
