--- a/packages/@testuj.to/react/src/components/RichTextReader/styles.css
+++ b/packages/@testuj.to/react/src/components/RichTextReader/styles.css
@@ -1,19 +1,42 @@
+.richtext-block {
+}
 
-.richtext-block {}
+.richtext-block-unstyled {
+}
 
-.richtext-block-unstyled {}
+.richtext-block-header-one {
+    font-size: 2em;
+    margin-bottom: 0.5em;
+}
+.richtext-block-header-two {
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
+}
+.richtext-block-header-three {
+    font-size: 1.17em;
+    margin-bottom: 0.5em;
+}
+.richtext-block-header-four {
+    font-size: 1em;
+    margin-bottom: 0.5em;
+}
+.richtext-block-header-five {
+    font-size: 0.83em;
+    margin-bottom: 0.5em;
+}
+.richtext-block-header-six {
+    font-size: 0.67em;
+    margin-bottom: 0.5em;
+}
 
-.richtext-block-header-one {}
-.richtext-block-header-two {}
-.richtext-block-header-three {}
-.richtext-block-header-four {}
-.richtext-block-header-five {}
-.richtext-block-header-six {}
-
-.richtext-block-unordered-list-item {}
-.richtext-block-ordered-list-item {}
-.richtext-block-code-block {}
-.richtext-block-blockquote {}
+.richtext-block-unordered-list-item {
+}
+.richtext-block-ordered-list-item {
+}
+.richtext-block-code-block {
+}
+.richtext-block-blockquote {
+}
 
 .richtext-block-align-left,
 .richtext-block-align-left > div {
