--- a/packages/@testuj.to/react/src/components/Checkbox/styles.css
+++ b/packages/@testuj.to/react/src/components/Checkbox/styles.css
@@ -7,6 +7,8 @@
     background-color: white;
     width: 18px;
     height: 18px;
+    min-width: 18px;
+    min-height: 18px;
     border-radius: 2px;
     display: flex;
     align-items: center;
