fix: mobile input optimalization

--- a/packages/@testuj.to/react/src/components/Input/styles.css
+++ b/packages/@testuj.to/react/src/components/Input/styles.css
@@ -1,47 +1,47 @@
 .tt-input {
-  width: 100%;
-  flex: 1;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  padding: 0 1rem;
-  font-size: 15px;
-  line-height: 1;
-  height: 2.6rem;
-  color: var(--color-text);
-  border: 1px solid var(--color-border);
-  outline: none;
-  box-sizing: border-box;
+    width: 100%;
+    flex: 1;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    padding: 0 1rem;
+    font-size: 15px;
+    line-height: 1;
+    height: 2.6rem;
+    color: var(--color-text);
+    border: 1px solid var(--color-border);
+    outline: none;
+    box-sizing: border-box;
 }
 
 .tt-input.icon {
-  padding-left: 2rem;
+    padding-left: 2rem;
 }
 
 .tt-input:focus {
-  box-shadow: 0 0 0 1px var(--color-border);
+    box-shadow: 0 0 0 1px var(--color-border);
 }
 
 .tt-input-dark {
-  background-color: #f0f2f4;
-  border-radius: 8px;
-  border: none;
+    background-color: #f0f2f4;
+    border-radius: 8px;
+    border: none;
 }
 
 .tt-input-wrapper {
-  position: relative;
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    position: relative;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .tt-input-icon {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 0.8rem;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0.8rem;
 }
 
 /* .Input {
@@ -62,3 +62,9 @@
 .Input:focus {
     box-shadow: 0 0 0 2px var(--violet8);
 } */
+
+@media (max-width: 768px) {
+    .tt-input {
+        font-size: 16px;
+    }
+}
