--- a/packages/@testuj.to/react/src/components/ProgressBar/styles.css
+++ b/packages/@testuj.to/react/src/components/ProgressBar/styles.css
@@ -1,45 +1,55 @@
 .tt-progress-bar {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  border-radius: 4px;
-  background-color: var(--color-border);
-  overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    background-color: var(--color-border);
+    /* overflow: hidden; */
 }
 
 .tt-progress-bar-wrapper {
-  position: relative;
-  width: 100%;
-  height: 8px;
-  border-radius: 4px;
+    position: relative;
+    width: 100%;
+    height: 8px;
+    border-radius: 4px;
 }
 
 .tt-progress-bar-indicator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  border-radius: 4px;
-  background-color: var(--color-primary);
-  transition: width 0.2s ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    border-radius: 4px;
+    background-color: var(--color-primary);
+    transition: width 0.2s ease-in-out;
 }
 
 .tt-progress-bar-breakpoint {
-  position: absolute;
-  top: 50%;
-  transform: translate(-4px, -50%);
-  width: 4px;
-  height: 4px;
-  border-radius: 50%;
-  background-color: #fff;
+    position: absolute;
+    top: 50%;
+    transform: translate(-4px, -50%);
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.tt-progress-bar-breakpoint-component {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    height: auto;
+    border-radius: 50%;
+    z-index: 1;
 }
 
 .tt-progress-bar-icon {
-  position: absolute;
-  top: 50%;
-  transform: translate(50%, -50%);
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    position: absolute;
+    top: 50%;
+    transform: translate(50%, -50%);
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
