fix: add campaign card link

--- a/packages/@testuj.to/react/src/components/CampaignCard/styles.css
+++ b/packages/@testuj.to/react/src/components/CampaignCard/styles.css
@@ -90,6 +90,11 @@
     background-color: var(--color-text-secondary);
 }
 
+.tt-campaign-card-link {
+    text-decoration: none;
+    color: inherit;
+}
+
 /* @media (max-width: 768px) {
   .tt-campaign-card-warpper {
     max-width: 90%;
