--- a/packages/@testuj.to/react/src/components/DatePicker/styles.css
+++ b/packages/@testuj.to/react/src/components/DatePicker/styles.css
@@ -360,3 +360,10 @@
 .react-datepicker__year-read-view--down-arrow {
     right: -22px;
 }
+
+.react-datepicker__header__dropdown {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+}
