--- a/packages/@testuj.to/react/src/components/VideoPlayer/styles.css
+++ b/packages/@testuj.to/react/src/components/VideoPlayer/styles.css
@@ -57,7 +57,7 @@
     color: #fff;
 }
 
-.tt-video-player-aspect:hover .tt-video-player-preview-play-icon {
+.tt-video-player-aspect:hover .tt-video-player-preview-play {
     border-color: #ff7b02;
 }
 
@@ -74,8 +74,6 @@
     height: 100vh; */
     background-color: black;
 }
-
-.tt-video-player-container-fullscreen {}
 
 .tt-video-player-video {
     width: 100%;
@@ -120,13 +118,35 @@
     background-color: #ff7b02;
 }
 
-.tt-video-player-progress-bar-current-label {
+.tt-video-player-progress-bar-preview-container {
+    position: absolute;
+    top: 0;
+    transform: translate(-50%,-100%);
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.tt-video-player-progress-bar-preview {
+    height: 64px;
+    width: auto;
+    border: 1px solid white;
+    border-radius: 4px;
+}
+
+.tt-video-player-progress-bar-preview-label {
+    padding: 6px 8px;
+    border-radius: 8px;
+    color: white;
+}
+
+.tt-video-player-progress-bar-previewlabel {
     position: absolute;
     top: 0;
     transform: translate(-50%,-100%);
     padding: 6px 8px;
     border-radius: 8px;
-    background: rgba(0,0,0,.6);
+    background-color: rgba(0,0,0,.6);
     color: white;
 }
 
@@ -162,7 +182,7 @@
 }
 
 .tt-video-player-control:not(.tt-video-player-control-text):hover {
-    color: var(--mantine-color-orange-7);
+    color: #ff7b02;
 }
 
 .tt-video-player-control-text {
@@ -175,15 +195,21 @@
     font-size: 1.1rem;
 }
 
+.tt-video-player-control-volume {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .tt-video-player-control-rotating {
     cursor: default;
     animation: rotation 2s infinite linear;
 }
 
-.tt-video-player-volume-container {
+.tt-video-player-volume {
     border-radius: 6px;
-    padding: 20px;
-    width: 300px;
+    padding: 12px;
+    width: 20px;
     background-color: white;
     box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
     animation-duration: 400ms;
@@ -191,20 +217,24 @@
     will-change: transform, opacity;
 }
 
-.tt-video-player-volume-container[data-side="top"] {
+.tt-video-player-volume[data-side="top"] {
     animation-name: slideDownAndFade;
 }
 
-.tt-video-player-volume-container[data-side="right"] {
+.tt-video-player-volume[data-side="right"] {
     animation-name: slideLeftAndFade;
 }
 
-.tt-video-player-volume-container[data-side="bottom"] {
+.tt-video-player-volume[data-side="bottom"] {
     animation-name: slideUpAndFade;
 }
 
-.tt-video-player-volume-container[data-side="left"] {
+.tt-video-player-volume[data-side="left"] {
     animation-name: slideRightAndFade;
+}
+
+.tt-video-player-volume-arrow {
+    fill: white;
 }
 
 .tt-video-player-volume-slider {
@@ -219,7 +249,7 @@
 }
 
 .tt-video-player-volume-slider-track {
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.3);
     position: relative;
     flex-grow: 1;
     border-radius: 9999px;
@@ -228,27 +258,27 @@
 
 .tt-video-player-volume-slider-range {
     position: absolute;
-    background-color: white;
+    background-color: #ff7b02;
     border-radius: 9999px;
     width: 100%;
 }
 
 .tt-video-player-volume-slider-thumb {
     display: block;
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height: 16px;
     background-color: white;
     box-shadow: 0 2px 10px rgba(0,0,0,0.5);
     border-radius: 10px;
 }
 
 .tt-video-player-volume-slider-thumb:hover {
-    background-color: #291F43;
+    background-color: #ff7b02;
 }
 
 .tt-video-player-volume-slider-thumb:focus {
     outline: none;
-    box-shadow: 0 0 0 5px rgba(0,0,0,0.3);
+    box-shadow: 0 0 0 3px rgba(0,0,0,0.3);
 }
 
 @keyframes rotation {
