--- a/packages/@testuj.to/react/src/components/VideoPlayer/styles.css
+++ b/packages/@testuj.to/react/src/components/VideoPlayer/styles.css
@@ -89,7 +89,7 @@
     left: 0;
     width: 100%;
     color: white;
-    /* animation: linear ease-in-out 1s; */
+    animation: linear ease-in-out 1s;
     transition-property: top;
     transition-duration: 10s;
 }
@@ -101,13 +101,9 @@
 .tt-video-player-progress-bar {
     position: relative;
     display: flex;
-    /* width: calc(100% - 24px); */
     width: 100%;
     height: 4px;
-    /* margin: 0 auto; */
-    /* border-radius: 8px; */
     background-color: white;
-    /* overflow: hidden; */
 }
 
 .tt-video-player-container.tt-video-player-container-fullscreen .tt-video-player-progress-bar {
@@ -156,7 +152,7 @@
     align-items: center;
     /* margin: 0 8px; */
     padding: 4px 8px;
-    background: rgba(255,255,255,.2);
+    background: rgba(0,0,0,.3);
 }
 
 .tt-video-player-container.tt-video-player-container-fullscreen .tt-video-player-controls {
