fix: missing disabled: Input, Select

--- a/packages/@testuj.to/react/src/components/Select/styles.css
+++ b/packages/@testuj.to/react/src/components/Select/styles.css
@@ -27,6 +27,11 @@
     color: var(--color-text-secondary);
 }
 
+.tt-select-trigger.disabled {
+    background-color: var(--color-light-gray);
+    color: var(--color-disabled);
+}
+
 .tt-select-trigger > .tt-select-trigger-icon {
     color: Var(--color-text-secondary);
 }
