--- a/packages/@testuj.to/react/src/components/DashedBarChart/styles.css
+++ b/packages/@testuj.to/react/src/components/DashedBarChart/styles.css
@@ -50,7 +50,7 @@
     border-radius: 6px;
     overflow: hidden;
     margin-right: 0.5rem;
-    background-color: var(--light-gray);
+    background-color: var(--color-light-gray);
 }
 
 .tt-dashed-bar-chart__item__bar__dash_fill {
