--- a/packages/@testuj.to/react/src/components/Input/styles.css
+++ b/packages/@testuj.to/react/src/components/Input/styles.css
@@ -19,6 +19,11 @@
     padding-left: 2rem;
 }
 
+.tt-input.disabled {
+    background-color: var(--color-light-gray);
+    color: var(--color-disabled);
+}
+
 .tt-input:focus {
     box-shadow: 0 0 0 1px var(--color-border);
 }
