--- a/packages/@testuj.to/react/src/components/NotificationsPopover/Notification/styles.css
+++ b/packages/@testuj.to/react/src/components/NotificationsPopover/Notification/styles.css
@@ -8,7 +8,7 @@
 }
 
 .tt-notification:hover {
-    background-color: var(--light-gray);
+    background-color: var(--color-light-gray);
     background: #f0f2f4 0% 0% no-repeat padding-box;
 }
 
